# cis519-tweet-replies

./: BERT_model.ipynb  README.md  albert_cis519_final_project.ipynb  deberta-model.ipynb  final_tweets_test.txt  final_tweets_training.txt  predictor.ipynb  preprocessing.py  pyproject.toml  roberta-model.ipynb  train_final_label.txt  tweet-analysis.py
data/: test_gold.txt  train_final_label.txt  tweet-scraper.py
