[tool.poetry]
name = "tweet-replies"
version = "0.1.0"
description = ""
authors = ["Jasmine Cao <jcao3@seas.upenn.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
request2 = "^0.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
