[tool.poetry]
name = "tweet-replies"
version = "0.1.0"
description = ""
authors = ["Jasmine Cao <jcao3@seas.upenn.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
request2 = "^0.2"
requests = "^2.27.1"
pandas = "^1.4.1"
tabulate = "^0.8.9"
nltk = "^3.7"
plotly = "^5.6.0"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
